[package]
name = "aqua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7"
futures-util = "0.3.30"
hyper-util = { version = "0.1.7", features=["full"]}
hyper = { version = "1.4.1", features=["full"]}
pin-project = "1.1.5"
tokio = { version = "1.0", features = ["full"] }
tower = {version = "0.4", features=["full"]}
tower-service = "0.3.2"
axum-core = "0.4.3"
pin-project-lite = "0.2.14"
bytes = "1.7.1"

[dev-dependencies]
hex = "0.4.3"
