[package]
name = "aqua"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "mqtt_coder"
]

[dependencies]
hex = "0.4"
anyhow = { version = "1.0.89", features = ["backtrace", "std"]}
axum = "0.7.7"
futures-util = "0.3.30"
pin-project = "1.1.5"
tokio = { version = "1.38.1", features = ["full"] }
tower = {version = "0.5.1", features=["full"]}
tower-service = "0.3.2"
axum-core = "0.4.3"
pin-project-lite = "0.2.14"
bytes = "1.7.2"
thiserror = "1.0.64"
mqtt_coder = {path = "./mqtt_coder"}
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7.13", features=["io"]}
uuid = { version = "1.7", features = ["v4"] }
mini-redis = "0.4"
env_logger = "0.11"
dashmap = "6.1.0"
once_cell = "1"

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
paho-mqtt = "0.13.1"
aqua = { path = "." }
dashmap = "6.1.0"

[lib]
name = "aqua"
path = "src/lib.rs"
