[package]
name = "mqtt_coder"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
anyhow = { version = "1.0.89", features = ["backtrace", "std"]}
axum = "0.7.7"
futures-util = "0.3.30"
pin-project = "1.1.5"
tower = {version = "0.5.1", features=["full"]}
tower-service = "0.3.2"
axum-core = "0.4.3"
pin-project-lite = "0.2.14"
bytes = "1.7.2"
thiserror = "1.0.64"
tracing = "0.1"
tracing-subscriber = "0.3"
num_enum = "0.7.3"

[dev-dependencies]
hex = "0.4.3"
async-stream = "0.3.6"
futures = "0.3.31"
tokio = { version = "1.38.1", features = ["full"] }

[profile.dev]
opt-level = 0