[package]
name = "mqtt_decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace", "std"]}
axum = "0.7.7"
futures-util = "0.3.30"
hyper-util = { version = "0.1.9", features=["full"]}
hyper = { version = "1.4.1", features=["full"]}
pin-project = "1.1.5"
tokio = { version = "1.40.0", features = ["full"] }
tower = {version = "0.5.1", features=["full"]}
tower-service = "0.3.2"
axum-core = "0.4.3"
pin-project-lite = "0.2.14"
bytes = "1.7.2"
thiserror = "1.0.64"

[dev-dependencies]
hex = "0.4.3"